--- a/nhkplusbrowser/package.json
+++ b/nhkplusbrowser/package.json
@@ -4,6 +4,7 @@
   "description": "A simple browser for NHK Plus programs",
   "main": "main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
